--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     ext.kotlin_version = '1.8.21'
     repositories {
         google()
+        maven {
+            url 'https://jitpack.io'
+        }
         mavenCentral()
     }
 
@@ -14,6 +17,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven {
+            url 'https://jitpack.io'
+        }
         mavenCentral()
     }
 }
