--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -10,4 +10,11 @@
     <!--Android 6.0 and above. Bluetooth scanning requires one of the following two permissions. You need to apply at run time .-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--Optional. If your app need dfu function .-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application>
+        <service android:name="aicare.net.cn.iweightlibrary.wby.WBYService" />
+    </application>
 </manifest>
