--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,7 +31,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -49,6 +49,7 @@ android {
 
     defaultConfig {
         minSdkVersion 21
+        targetSdkVersion 34
         ndk.abiFilters 'armeabi-v7a','arm64-v8a','x86','x86_64'
     }
 
