--- a/android/build.gradle
+++ b/android/build.gradle
@@ -79,6 +79,7 @@ android {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.beust:klaxon:5.5'
     //api project(':iweightlibrary')
     implementation 'com.github.elinkthings:BodyFatScaleSDKRepositoryAndroid:1.5.1'
     //implementation 'https://github.com/lincoln4791/BodyFatScaleSDKRepositoryAndroid.git'
