--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace = "com.cmedhealth.flutter.bmi.cmed_bmi_devices_lib"
     compileSdkVersion 34
 
     compileOptions {
