--- a/android/build.gradle
+++ b/android/build.gradle
@@ -76,6 +76,12 @@ android {
             }
         }
     }
+    packagingOptions {
+        jniLibs {
+            // Forces the build to NOT compress .so files
+            useLegacyPackaging = false
+        }
+    }
 }
 
 dependencies {
